[tool.poetry]
name = "exact-rag"
version = "0.1.0"
description = "AI-augmented, conversation information retrieval and data exploration"
authors = ["Marco Franzon <marco.franzon@exact-lab.it>", "Matteo Poggi <matteo.poggi@exact-lab.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
langchain = "^0.1.0"
toml = "^0.10.2"
openai = "^1.7.0"
langchain-openai = "^0.0.2"
chromadb = "^0.4.22"
pandas = "^2.1.4"
elasticsearch = "^8.11.1"
uvicorn = "^0.25.0"
python-multipart = "^0.0.6"
rich = "^13.7.0"
aiofiles = "^23.2.1"
openai-whisper = "^20231117"
pymupdf = "^1.23.9"
salesforce-lavis = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
