[tool.poetry]
name = "exact-rag"
version = "0.1.0"
description = "AI-augmented, conversation information retrieval and data exploration"
authors = ["Marco Franzon <marco.franzon@exact-lab.it>", "Matteo Poggi <matteo.poggi@exact-lab.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
langchain = "^0.1.0"
toml = "^0.10.2"
openai = "^1.7.0"
langchain-openai = "^0.0.2"
langchain-community = "0.0.11"
chromadb = "^0.4.22"
pandas = "^2.1.4"
elasticsearch = "^8.11.1"
uvicorn = "^0.25.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
pydantic = "^2.5.3"


openai-whisper = { version = "^20231117", optional = true}
transformers = { version = "^4.36.2", optional = true}
pillow = { version = "^10.2.0", optional = true}
fastui = "^0.4.0"
torch = "^2.2.0"


[tool.poetry.extras]
audio = ["openai-whisper"]
image = ["pillow", "transformers"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pre-commit = "^3.6.0"
streamlit = "^1.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
